fix: radix styles were overlapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 html, body {
+  background-color: #141414;
   overflow-x: hidden;
 }
 
